fixed height issue on mobile view

--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -115,6 +115,7 @@ body {
   }
   
   #tweets {
+    margin-bottom: 2em;
     width: auto;
 
     iframe#twitter-widget-0 {
